Sync all content

--- a/content/resources/12-804f09.md
+++ b/content/resources/12-804f09.md
@@ -11,6 +11,8 @@ description: Animated tropopause maps at 12 hour intervals during the Blizzard o
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/69bbbc522d22da653456e0ee2db35e01_12-804f09.gif
 file_size: 84911
 file_type: image/gif
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Animated tropopause maps at 12 hour intervals during the Blizzard of 2003,
     a typical "northeaster" with record breaking snowfall for Boston. Tropopause maps
