--- a/content/resources/12-804f09-th.md
+++ b/content/resources/12-804f09-th.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/3b6cc3d685dfe822711669f028815bde_12-804f09-th.jpg
 file_size: 21458
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Animated tropopause maps at 12 hour intervals during the Blizzard of 2003,
     a typical "northeaster" with record breaking snowfall for Boston. Tropopause maps
