--- a/content/resources/mit12_804f09_gstr1.md
+++ b/content/resources/mit12_804f09_gstr1.md
@@ -4,6 +4,8 @@ description: 'This resource contains information related to waves on the Gulf st
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/f33ee7d3698405f8765f578a2aac4591_MIT12_804F09_gstr1.pdf
 file_size: 74035
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Projects
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
