--- a/content/resources/mit12_804f09_oa.md
+++ b/content/resources/mit12_804f09_oa.md
@@ -4,6 +4,8 @@ description: This resource contains information related to objective analysis.
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/1bdc3081966919bd86da438c00ffc9d6_MIT12_804F09_oa.pdf
 file_size: 55548
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Readings
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
