--- a/content/resources/mit12_804f09_qg0.md
+++ b/content/resources/mit12_804f09_qg0.md
@@ -5,6 +5,8 @@ description: "This resource contains equations for homogeneous, incom\xADpressib
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/f86db7ca791f58be72da6835a0b081f6_MIT12_804F09_qg0.pdf
 file_size: 38313
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Readings
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
