--- a/content/resources/mit12_804f09_qg2.md
+++ b/content/resources/mit12_804f09_qg2.md
@@ -4,6 +4,8 @@ description: 'This resource contains information related to baroclinic inversion
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/00a81addc373dafd6a6c7f56de9a493f_MIT12_804F09_qg2.pdf
 file_size: 54069
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Projects
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
