--- a/content/resources/mit12_804f09_tank2.md
+++ b/content/resources/mit12_804f09_tank2.md
@@ -4,6 +4,8 @@ description: 'This resource contains information related to baroclinic instabili
 file: /courses/12-804-large-scale-flow-dynamics-lab-fall-2009/cffd65f055c2b054dc2a370fe208250f_MIT12_804F09_tank2.pdf
 file_size: 34600
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Projects
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
